--- a/justins-files/views/mixins/_loginForm.pug
+++ b/justins-files/views/mixins/_loginForm.pug
@@ -5,4 +5,6 @@ mixin loginForm()
         input(type="email" name="email")
         label(for="password") Password
         input(type="password" name="password")
+        label(for="remember") Remember Me
+            input(type="checkbox" name="remember" style="margin-left:10px;width:initial")
         input.button(type="submit" value="Log in")
